--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 app/Untitled.ipynb
 app/tailwindcss.exe
+app/curves/__pycache__/__init__.cpython-312.pyc
+app/curves/__pycache__/pchip_cache.cpython-312.pyc
