修正排行榜参数

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ app/Untitled.ipynb
 app/tailwindcss.exe
 app/curves/__pycache__/__init__.cpython-312.pyc
 app/curves/__pycache__/pchip_cache.cpython-312.pyc
+admin/__pycache__/admin_data.cpython-312.pyc
