--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ admin/__pycache__/admin_calib.cpython-312.pyc
 app/curves/__pycache__/spectrum_cache.cpython-312.pyc
 admin/__pycache__/admin_calib.cpython-312.pyc
 admin/__pycache__/admin_calib.cpython-312.pyc
+admin/__pycache__/admin_calib.cpython-312.pyc
