--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@ app/tailwindcss.exe
 app/curves/__pycache__/__init__.cpython-312.pyc
 app/curves/__pycache__/pchip_cache.cpython-312.pyc
 admin/__pycache__/admin_data.cpython-312.pyc
+admin/audio_calib/__pycache__/pipeline.cpython-312.pyc
+admin/audio_calib/pipelline_readme.txt
+admin/__pycache__/admin_calib.cpython-312.pyc
+admin/__pycache__/adminserver.cpython-312.pyc
+admin/__pycache__/admin_calib.cpython-312.pyc
+app/curves/__pycache__/spectrum_cache.cpython-312.pyc
+admin/__pycache__/admin_calib.cpython-312.pyc
+admin/__pycache__/admin_calib.cpython-312.pyc
+admin/__pycache__/admin_calib.cpython-312.pyc
+app/audio_calib/__pycache__/pipeline.cpython-312.pyc
