--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ admin/__pycache__/admin_calib.cpython-312.pyc
 admin/__pycache__/admin_calib.cpython-312.pyc
 admin/__pycache__/admin_calib.cpython-312.pyc
 app/audio_calib/__pycache__/pipeline.cpython-312.pyc
+app/curves/__pycache__/spectrum_builder.cpython-312.pyc
